change component title to Home

--- a/antora.yml
+++ b/antora.yml
@@ -1,7 +1,6 @@
 name: community
-title: Asciidoctor Community
+title: Home
 version: master
-display_version: current
 asciidoc:
   attributes:
     xrefstyle: short@
