rename component title to Community and restore display version

--- a/antora.yml
+++ b/antora.yml
@@ -1,6 +1,7 @@
 name: community
-title: Home
+title: Community
 version: master
+display_version: current
 asciidoc:
   attributes:
     xrefstyle: short@
