declare components as versionless using ~ value

--- a/about/antora.yml
+++ b/about/antora.yml
@@ -1,7 +1,6 @@
 name: about
 title: Community
-version: master
-display_version: current
+version: ~
 asciidoc:
   attributes:
     xrefstyle: short@
